core/java/src/main/java/org/phylospec/parser/grammar.ebnf
expression     → equality
equality       → comparison ( ( "!=" | "==" ) comparison )*
comparison     → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" ) unary )* ;
unary          → ( "!" | "-" ) unary | primary
primary        → INT | FLOAT | STRING | "true" | "false" | "(" expression ")"
